third_party/move/move-compiler-v2/tests/reference-safety/v1-typing/mutable_borrow_from_immutable.old.exp

Diagnostics:
error: cannot mutably borrow from an immutable ref
  ┌─ tests/reference-safety/v1-typing/mutable_borrow_from_immutable.move:6:9
  │
6 │         &mut (&s).v;
  │         ^^^^^^^^^^^

error: field `v` not declared in struct `X`
   ┌─ tests/reference-safety/v1-typing/mutable_borrow_from_immutable.move:11:14
   │
11 │         &mut xref.v;
   │              ^^^^
